--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,3 +1,61 @@
 {
-    "HELLO": "Привет, мир"
+  "HELLO": "Hello World",
+  "learnMore": "Подробнее",
+  "baseHome": "Главная",
+  "baseAbout": "О Нас",
+  "baseContacts": "Контакты",
+  "viewAllTours": "Посмотреть все туры",
+  "viewAllPosts": "Просмотреть все блоги",
+  "allRights": "Все права защищены",
+  "bookTour": "Забронируйте тур",
+  "hotTours": "Горячие туры",
+  "from": "от",
+  "viewAllDest": "Просмотреть все",
+  "address": "Адрес",
+  "phones": "Телефоны",
+  "hours": "Часы работы",
+  "contactUs": "Связаться с нами",
+  "firstName": "Имя",
+  "last Name": "Фамилия",
+  "phone": "Телефон",
+  "email": "Электронная Почта",
+  "message": "Сообщение",
+  "sendMessage": "Отправить",
+  "day1": "Пон-Пят",
+  "day2": "Суб-Вос",
+  "compAddress": "Улица А.Наваи, Дом 1, 12 А",
+
+  "home": {
+    "head": "Сотни удивительных мест",
+    "offer": "Мы предлагаем различные направления для путешествий, от экзотических до экстремальных. Среди них такие популярные страны и города, как Париж, Рио-де-Жанейро, Каир и многие другие.",
+    "bestTours": "Наши лучшие туры",
+    "ourServices": "Наши услуги",
+    "airTickets": "Авиабилеты",
+    "voyages": "Путешествия & Круизы",
+    "hotelBooking": "Бронирование отелей",
+    "summerTours": "Индивидуальные летние туры",
+    "ticketInfo": "В нашем туристическом агентстве вы можете забронировать авиабилеты в любое направление мира. Мы также предоставляем возможность онлайн-бронирования билетов через наш сайт всего за несколько шагов",
+    "voyageInfo": "Кроме обычных туров и экскурсий, мы также предлагаем различные круизы и морские путешествия для разных клиентов, ищущих впечатляющие ощущения.",
+    "bookingInfo": "Мы предлагаем широкий выбор отелей, начиная от 5-звёздочных и заканчивая небольшими объектами по всему миру, чтобы вы могли забронировать отель по своему вкусу.",
+    "summerTourInfo": "Наше агентство предлагает разнообразные туры, включая индивидуальные летние туры для клиентов, которые ищут эксклюзивный и запоминающийся отдых.",
+    "latestNews": "Последние новости"
+
+  },
+
+  "about":{
+    "whoWe": "Кто мы",
+    "head": "Привет, мы Sealine",
+    "we1": "Туристическое агентство Sealine представлено на международном туристическом рынке с 2023 года. За это время агентство разработало и успешно реализовало ряд увлекательных групповых и индивидуальных туров в Узбекистан, Кыргызстан, Туркменистан, Таджикистан, Казахстан, Грузию, Азербайджан.",
+    "we2": "Компания приобрела обширный опыт в туристической отрасли и установила проверенные временем партнерские отношения с рядом туристических операторов в странах Закавказья, Западной Европы и Северной Америки. Офис MainTravel находится в Ташкенте (Узбекистан) и предоставляет услуги по бронированию отелей, а также организует туры в страны Великого шелкового пути.",
+    "destinations" : "Направления",
+    "destInfo": "Команда профессионалов компании также организует и обслуживает деловые поездки в странах Великого шелкового пути и разрабатывает эксклюзивные туры по запросу клиента.",
+    "prices": "Самые доступные цены!",
+    "favDestination": "Выберите свое любимое направление!",
+    "order": "Закажите тур!"
+  },
+
+  "contacts":{
+    "inTouch": "Свяжитесь с нами",
+    "canContact": "Вы можете связаться с нами любым удобным для вас способом. Мы доступны круглосуточно по факсу или электронной почте. Вы также можете использовать быструю контактную форму ниже или посетить наш офис лично."
   }
+}
