navbar fixes and other style improvings

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "HELLO": "Hello World",
   "learnMore": "Learn More",
-  "baseHome": "home",
+  "baseHome": "Home",
   "baseAbout": "About Us",
   "baseContacts": "Contacts",
   "viewAllTours": "View All Tours",
