phone, email fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,7 +23,7 @@
   "sendMessage": "Send Message",
   "day1": "Mon-Fri",
   "day2": "Sat-Sun",
-  "compAddress": "A.Navoiy street, 1, 12 А",
+  "compAddress": "Kichik khalqa yuli",
   
   "home": {
     "head": "Hundreds of Amazing Destinations",
@@ -44,8 +44,8 @@
 
   "about":{
     "whoWe": "Who We Are",
-    "head": "hi, we are sealine",
-    "we1": "The travel agency MainTravel has been represented on the international tourism market since 2023. Over the past time, the agency has developed and successfully implemented a number of exciting group and individual tours to Uzbekistan, Kyrgyzstan, Turkmenistan, Tajikistan, Kazakhstan, Georgia, Azerbaijan, .",
+    "head": "hi, we are Memory Travel",
+    "we1": "The travel agency Memory Travel has been represented on the international tourism market since 2023. Over the past time, the agency has developed and successfully implemented a number of exciting group and individual tours to Uzbekistan, Kyrgyzstan, Turkmenistan, Tajikistan, Kazakhstan, Georgia, Azerbaijan, .",
     "we2": "The company has acquired extensive experience in the tourism industry and has established time-tested partnerships with a number of tour operators in the countries of Transcaucasia, Western Europe and North America. MainTravel office - in Tashkent (Uzbekistan), provide hotel booking services and also organize tours to the countries of the Great Silk Road. ",
     "destinations" : "Destinations",
     "destInfo": "The company's team of professionals also organizes and services business trips in the countries of the Great Silk Road and develops exclusive tours upon request of the client.",
