--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -23,7 +23,7 @@
   "sendMessage": "Отправить",
   "day1": "Пон-Пят",
   "day2": "Суб-Вос",
-  "compAddress": "Улица А.Наваи, Дом 1, 12 А",
+  "compAddress": "Малая кольцевая дорога, 84",
 
   "home": {
     "head": "Сотни удивительных мест",
@@ -44,8 +44,8 @@
 
   "about":{
     "whoWe": "Кто мы",
-    "head": "Привет, мы Sealine",
-    "we1": "Туристическое агентство Sealine представлено на международном туристическом рынке с 2023 года. За это время агентство разработало и успешно реализовало ряд увлекательных групповых и индивидуальных туров в Узбекистан, Кыргызстан, Туркменистан, Таджикистан, Казахстан, Грузию, Азербайджан.",
+    "head": "Привет, мы Memory Travel",
+    "we1": "Туристическое агентство Memory Travel представлено на международном туристическом рынке с 2023 года. За это время агентство разработало и успешно реализовало ряд увлекательных групповых и индивидуальных туров в Узбекистан, Кыргызстан, Туркменистан, Таджикистан, Казахстан, Грузию, Азербайджан.",
     "we2": "Компания приобрела обширный опыт в туристической отрасли и установила проверенные временем партнерские отношения с рядом туристических операторов в странах Закавказья, Западной Европы и Северной Америки. Офис MainTravel находится в Ташкенте (Узбекистан) и предоставляет услуги по бронированию отелей, а также организует туры в страны Великого шелкового пути.",
     "destinations" : "Направления",
     "destInfo": "Команда профессионалов компании также организует и обслуживает деловые поездки в странах Великого шелкового пути и разрабатывает эксклюзивные туры по запросу клиента.",
